# large-gf

./: GF2_16.cry  GF2_8.cry  LICENSE  Makefile  README  gf.cry  gf2_128.c  gf2_128.h  gf2_16.c  gf2_16.h  gf2_32.c  gf2_32.h  gf2_64.c  gf2_64.h  gfBridge.cabal  main.c  main128.c  main64.c  main_gfc.c  main_gfc128.c
Data/: GF2_64.hs  GF2_64_Poly.hs  GF2_64_Properties.hs
opencl/: Makefile  gf2_16.cl  hello.c  hello.cl  rungf.c
